# py-noisemaker

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  JS-README.md  LICENSE  PRESET_DSL_SPEC.md  PY_JS_PARITY_SPEC.md  QUICKSTART-JS.md  README-DOCKER.md  README-JS.md  README.md  README.rst  VANILLA_JS_PORT_SPEC.md  WEBGPU_PIPELINE_SPEC.md  WGSL-MULTIRES-TODO.md  demo.html  effect-migration.txt  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  py_noisemaker.ipynb  pyproject.toml  requirements-mac.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: app.yml  python-app.yml
benchmarks/: effects.bench.js
demo/: common.css  index.html
demo/gpu-effects/: colors.css  effect-ui-generator.js  index.html  main.js  shader-registry.js
demo/js/: index.html
demo/shaders/: index.html
docker/: Dockerfile  README.md  push-docker
docs/: DOCUMENTATION.md  Makefile  animaker.rst  api.rst  artmaker.rst  artmangler.rst  build-docs.sh  cli.rst  composer.rst  conf.py  effects.rst  exec-graph.md  generators.rst  index.rst  javascript.rst  modules.rst  noisemaker-help.txt  noisemaker-old-help.txt  noisemaker-old.rst  noisemaker.rst  noisemakerhelp.txt  shaders.rst  sphinx-requirements.txt  update-bundle.sh  webgpu-limitations.md
docs/_ext/: noisemaker_live.py
docs/_static/: .gitkeep  custom.css  noisemaker-live.js  preset-viewer.js
dsl/: __init__.py  presets.dsl
hooks/: pre-commit
js/: README-JS.md
js/doc/: ASYNC_RENDERING.md  PY_JS_PARITY_SPEC.md  VANILLA_JS_PORT_SPEC.md
js/noisemaker/: asyncHelpers.js  composer.js  constants.js  context.js  effects.js  effectsRegistry.js  generators.js  index.js  masks.js  palettes.js  points.js  presets.js  rng.js  settings.js  simplex.js  tensor.js  value.js
noisemaker/: __init__.py  ai.py  cli.py  composer.py  constants.py  dreamer.py  effects.py  effects_registry.py  fastnoise.py  generators.py  glyphs.py  masks.py  new_presets.py  oklab.py  old_presets.py  palettes.py  points.py  presets.py  recipes.py  rng.py  simplex.py  util.py  value.py
noisemaker/dsl/: __init__.py  builtins.py  evaluator.py  parser.py  tokenizer.py
noisemaker/scripts/: animaker.py  animangler.py  artmaker.py  artmaker_new.py  artmangler.py  collagemaker.py  crop.py  glitchmaker.py  magic_mashup.py  mood.py  noisemaker.py  noisemaker_old.py  worldmaker.py
scripts/: build-cli.js  build-standalone-cli.js  build.js  bundle.js  checkEnums.js  fix_wgsl_types.py  generate_fixtures.py  image_regression.py  regress.js  run-js-tests.js
shaders/: AGENTS.md  IMPLEMENTATION_GUIDE.md  README-SHADERS.md  compound-effects.md  manifest.json
shaders/common/: simple-compute-effect.js
shaders/effects/: AGENTS.md
shaders/tests/: headless.test.js  visual-diff-effect.js
src/: bufferPool.js  composer.js  constants.js  context.js  effects.js  effectsRegistry.js  generators.js  glyphs.js  masks.js  oklab.js  palettes.js  points.js  presets-works.js  presets.js  rng.js  simplex.js  tensor.js  util.js  value.js
src/dsl/: builtins.js  evaluator.js  index.js  parser.js  tokenizer.js
src/webgpu/: binary-op.wgsl  blend-const.wgsl  blend.wgsl  convolution.wgsl  crt.wgsl  degauss.wgsl  derivative.wgsl  dla.wgsl  downsample.wgsl  erosion-worms.wgsl  expand-channels.wgsl  fxaa.wgsl  glyph-map.wgsl  grayscale.wgsl  grime-blend.wgsl  grime-mask.wgsl  hsv-to-rgb.wgsl  kaleido.wgsl  lens-distortion.wgsl  normal-map.wgsl  normalize.wgsl  octave-combine.wgsl  pipeline.js  pixel-sort.wgsl  refract.wgsl  resample.wgsl  reverb.wgsl  rgb-to-hsv.wgsl  scratches-blend.wgsl  scratches-mask.wgsl  shaders.js  sobel.wgsl  spatter-mask.wgsl  tint.wgsl  unary-op.wgsl  vaseline-blur.wgsl  vaseline-mask.wgsl  vhs.wgsl  voronoi.wgsl  vortex.wgsl  (+4 more)
test/: canvas.test.js  cli.test.js  colors.test.js  composer.test.js  conftest.py  constants-parity.test.js  constants.test.js  effects-fixture.test.js  effects-parity.test.js  effects.test.js  effectsRegistry.test.js  encoder.test.js  erosion-worms-parity.test.html  erosion-worms-parity.test.js  evaluator.test.js  generators.test.js  mapEffect.test.js  masks-parity.test.js  masks.test.js  palettes-parity.test.js  palettes.test.js  parser.test.js  points-fixture.test.js  points.test.js  preset-cycle.test.js  presets-params-parity.test.js  presets-parity.test.js  presets-render.test.js  presets.test.js  reverb-parity.test.html  reverb-parity.test.js  rng.test.js  simplex.test.js  test_composer.py  test_dsl_evaluator.py  test_dsl_parser.py  test_old_presets.py  test_presets.py  test_presets_dsl.py  value-fixture.test.js  (+14 more)
test/fixtures/: adjustBrightness.json  adjustContrast.json  adjustHue.json  blendLayers.json  bloom.json  blur.json  centerMask.json  clouds.json  colorMap.json  composer.json  convFeedback.json  convolve.json  convolveEdges.json  crt.json  densityMap.json  dla.json  erosionWorms.json  expandTile.json  falseColor.json  frame.json  fxaaEffect.json  glitch.json  grime.json  innerTile.json  jpegDecimate.json  kaleido.json  lightLeak.json  lowpoly.json  nebula.json  normalize.json  offsetIndex.json  onScreenDisplay.json  palette.json  pixelSort.json  posterize.json  randomHue.json  refractEffect.json  reverb.json  ridge.json  ripple.json  (+25 more)
test/parity/: __init__.py  generate_hashes.js  rng_sequence.js  run_dsl.js  run_effects.js  run_rng.js  (+16 more)
(+361 files in other folders)
